# dist-auth-talk

./: Makefile  index.js  shell.nix  slides.md  template.html
assets/: biscuit_bg-fda15ca5.wasm  bonaldi.avif  but-why.webm
demos/haskell/: biscuit-demo.cabal  shell.nix
demos/haskell/src/: Main.hs  Picture.hs
demos/node/: biscuit.js  index.js  koa.js  package-lock.json  package.json  shell.nix  toto.js
demos/node/assets/public/: index.html  index.js
demos/rust/: Cargo.toml  demo.md  shell.nix
demos/rust/assets/public/: biscuit_bg-492d400e.wasm  biscuit_bg-ed16659c.wasm  index.html
demos/rust/src/: auth.rs  main.rs
