[package]
name = "biscuit-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "query"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
biscuit-auth = "4.1.0"
http = "1.1"
tower = "0.4"
futures-util = "0.3.30"
rand = "0.8.5"
serde_urlencoded = "0.7.1"
tower-http = { version = "0.5.2", features = ["fs"] }
base64 = "0.22.0"
